--- a/intro/index.html
+++ b/intro/index.html
@@ -27,6 +27,7 @@
 		<img src="https://lh3.googleusercontent.com/proxy/alOzE-laC0aOcjNP_TuoY07PjAV-6E7ATbOKDVqr5QW3jU6rwNMqXy0oVQ3lICgVfGDHqjDTM-cHC5isVLQD8dS7W4hS5YVtDczkeGw5ryTKb6Q" width="300" height="300">
 
 		<p>paragrap</p>
+		<h1>jihee_test</h1>
 
 		<a href="https://google.com" target="_blank">구글로 가는 링크</a>
 
